@@ -92,10 +92,6 @@
                     <value>
                       <list>
                         <tuple>
-                          <string>id</string>
-                          <string>ID</string>
-                        </tuple>
-                        <tuple>
                           <string>role_name</string>
                           <string>Role</string>
                         </tuple>
